--- a/dummy-site/app/components/Navbar.module.css
+++ b/dummy-site/app/components/Navbar.module.css
@@ -7,21 +7,16 @@
   background-color: var(--card-color);
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  transition: opacity 0.3s ease;
-}
 
-.logo:hover {
+.name:hover {
   opacity: 0.8;
 }
 
-.logoImage {
-  object-fit: contain;
-  height: auto;
+.name {
+
 }
+
+
 
 .nav {
   max-width: 1200px;
