--- a/dummy-site/app/page.module.css
+++ b/dummy-site/app/page.module.css
@@ -1,5 +1,3 @@
-
-/* CTA Section */
 .ctaSection {
   padding: 4rem 2rem;
 }
@@ -80,8 +78,7 @@
 
 .heroSection {
   position: relative;
-  height: 30vh;
-  min-height: 300px;
+  min-height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
